.. -*- restructuredtext -*-

This file describes user-visible changes between the extension versions.


Version 0.3 (2015-02-19)
------------------------

* Adds six dependency
* Adds pockets dependency
* Removes iterators module (now found in pockets package)
* Removes pavertasks module, deemed redundant as it simply called sphinx-apidoc


Version 0.2.11 (2015-02-15)
---------------------------

* Fix Google Docstring argument regex. Argument types now more permissive,
  allowing spaces and other special characters.


Version 0.2.10 (2015-02-09)
---------------------------

* Adds "Yield" alias for "Yields" section


Version 0.2.9 (2015-01-12)
--------------------------

* Fixes bug which silently omitted *args and **kwargs parameters
* Fixes bug where ignored parameter if description is empty


Version 0.2.8 (2014-06-13)
--------------------------

* Fixes bug which failed to render links in attribute types


Version 0.2.7 (2014-04-19)
--------------------------

* Fixes import error when processing namedtuples
* Adds Python 3.4 as a tox environment


Version 0.2.6 (2014-03-21)
--------------------------

* Fixes "Args:" type parsing bug in Google style docs


Version 0.2.5 (2014-03-11)
--------------------------

* Fixes Python 3.3 bug which included private and special members in the docs
* Fixes bug which failed to render links in function parameter types
* Adds support for See Also refs written using the NumpyDoc style
* Uses unittest.mock for Python >= 3.3


Version 0.2.4 (2014-01-21)
--------------------------

* Drops official support for 3.1
* Brings code into parity with Sphinx 1.3 "sphinx.ext.napoleon"
* Restricts allowable Sphinx version to < 1.3


Version 0.2.3 (2014-01-16)
--------------------------

* Adds python 3.1 support
* Fixes tests for python 3.*
* Adds tox environments: py26,py27,py31,py32,py33,pypy


Version 0.2.2 (2013-12-13)
--------------------------

* Adds python 3 support


Version 0.2.1 (2013-07-26)
--------------------------
